register -> join으로 개선
